--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,17 @@
 /* Add CSS Styling */
+
+* {
+    margin: 0%;
+    border: 0%;
+}
+
+.avatar.proportioned {
+    width: 300px;
+    height: auto;
+    
+}
+
+.avatar.distorted {
+    width: 200px;
+    height: 400px;
+}
