--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -30,19 +30,14 @@ body {
   font-weight: bold;
 } 
 
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
 div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
 }
 
+.small-para,
 div.child {
-  font-weight: 800;
   font-size: 14px;
+  font-weight: 800;
 }
