--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -4,24 +4,36 @@ body {
 }
 
 .card {
-  width: 400px;
+  width: 66%;
   background: #fff;
   margin: 16px auto;
+  border: 4px solid white;
 }
 
 .title {
+  font-size: 16px;
   background: #e3f4ff;
+  margin: 0%;
+  padding: 8px;
+  border: 4px solid white;
 }
 
 .content {
   background: #e3f4ff;
+  border: 4px solid white;
+  padding: 16px;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  border: 4px solid white;
+  padding: 8px;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: auto;
 }
