--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,22 +1,34 @@
 .header  {
+  margin: 2%;
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .logo {
+  text-align: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 ul {
+  display: flex;
+  padding: 0%;
+  justify-content: space-evenly;
+  gap: 100px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
 
 a {
+  
   font-size: 22px;
   background: white;
   padding: 8px;
