--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,38 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.content {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  gap: 16px;
+  padding: 0%;
+  margin: 16px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(150, 150, 150);
+  color: white;
+  text-align: center;
+}
